--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -44,7 +44,7 @@ code {
     --radius: 0.625rem;
     --sidebar: oklch(0.9 0 0);
     --sidebar-foreground: oklch(0.141 0.005 285.823);
-    --sidebar-primary: oklch(0.4 0.2 264.509);
+    --sidebar-primary: var(--primary);
     --sidebar-primary-foreground: oklch(0.985 0 0);
     --sidebar-accent: oklch(0.967 0.001 286.375);
     --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
@@ -79,7 +79,7 @@ code {
     --chart-5: oklch(0.645 0.246 16.439);
     --sidebar: oklch(0.141 0.005 285.823);
     --sidebar-foreground: oklch(0.985 0 0);
-    --sidebar-primary: oklch(0.488 0.243 264.376);
+    --sidebar-primary: var(--primary);
     --sidebar-primary-foreground: oklch(0.985 0 0);
     --sidebar-accent: oklch(0.274 0.006 286.033);
     --sidebar-accent-foreground: oklch(0.985 0 0);
